feat(cpu): reset partition kernel architecture