@@ -5,6 +5,7 @@ import io.github.pho001.synaptik.model.datatype.DataType;
 import io.github.pho001.synaptik.model.layout.LayoutKind;
 import io.github.pho001.synaptik.model.operation.NoOperationAttrs;
 import io.github.pho001.synaptik.model.operation.elementwise.binary.BinaryArithmeticKind;
+import io.github.pho001.synaptik.model.operation.elementwise.unary.UnaryElementwiseKind;
 import io.github.pho001.synaptik.model.tensor.TensorDescriptor;
 import io.github.pho001.synaptik.planning.capability.BackendCapabilityProvider;
 import io.github.pho001.synaptik.planning.capability.OperationCapabilityQuery;
@@ -14,12 +15,9 @@ import java.util.Objects;
  * Reports the executable semantic coverage currently delivered by the CPU backend.
  *
  * <p>The provider has a stable CPU ownership identity and advertises only parameterless
- * {@code ADD} occurrences whose two inputs and one output have the same fully static shape and
- * the same {@code FLOAT64}, {@code FLOAT32}, {@code INT32}, or {@code INT64} data type. Each
- * layout must be unresolved or resolved as canonical dense contiguous, zero-offset, non-view
- * geometry. The corresponding implementation is the scalar, single-thread, native-segment
- * route. Construction performs no platform discovery, registration, allocation, or native
- * loading.</p>
+ * {@code FLOAT64} {@code ADD}, exact {@code GELU}, and {@code MUL} occurrences with fully static,
+ * equal, resolved canonical-dense geometry. Complete-partition lowering applies the additional
+ * alias, fan-out, publication, and partition-boundary checks before declaring support.</p>
  */
 public final class CpuCapabilityProvider implements BackendCapabilityProvider {
     /** Stable Planning ownership identity for the CPU backend. */
@@ -40,9 +38,9 @@ public final class CpuCapabilityProvider implements BackendCapabilityProvider {
     }
 
     /**
-     * Reports whether an occurrence belongs to the exact implemented dense {@code ADD} matrix.
-     * Unresolved layouts are accepted because CPU preparation selects a canonical materialized
-     * representation; a resolved offset, strided, or view layout is rejected.
+     * Reports whether an occurrence belongs to the exact implemented dense semantic set.
+     * Every input and output must already have a resolved canonical-dense, zero-offset, non-view
+     * layout; unresolved, offset, strided, and view layouts fail closed.
      *
      * @param query non-null immutable operation occurrence to validate structurally
      * @return {@code true} only for the exact implemented occurrence matrix; otherwise
@@ -52,38 +50,31 @@ public final class CpuCapabilityProvider implements BackendCapabilityProvider {
     @Override
     public boolean supports(OperationCapabilityQuery query) {
         Objects.requireNonNull(query, "query");
-        if (query.operation().kind() != BinaryArithmeticKind.ADD
-                || query.operation().attrs() != NoOperationAttrs.INSTANCE
-                || query.inputs().size() != 2
+        if (query.operation().attrs() != NoOperationAttrs.INSTANCE
                 || query.outputs().size() != 1) {
             return false;
         }
-        TensorDescriptor left = query.inputs().get(0);
-        TensorDescriptor right = query.inputs().get(1);
+        boolean unary = query.operation().kind() == UnaryElementwiseKind.GELU;
+        boolean binary = query.operation().kind() == BinaryArithmeticKind.ADD
+                || query.operation().kind() == BinaryArithmeticKind.MUL;
+        if ((!unary && !binary) || query.inputs().size() != (unary ? 1 : 2)) return false;
+        TensorDescriptor left = query.inputs().getFirst();
         TensorDescriptor output = query.outputs().get(0);
         DataType dataType = left.dataType();
-        if (!supportedDataType(dataType)
-                || right.dataType() != dataType
+        if (dataType != DataType.FLOAT64
                 || output.dataType() != dataType
                 || !left.shape().isFullyStatic()
-                || !left.shape().equals(right.shape())
                 || !left.shape().equals(output.shape())) {
             return false;
         }
-        return canonicalOrUnresolved(left)
-                && canonicalOrUnresolved(right)
-                && canonicalOrUnresolved(output);
+        if (binary && (query.inputs().get(1).dataType() != dataType
+                || !query.inputs().get(1).shape().equals(left.shape()))) return false;
+        return query.inputs().stream().allMatch(CpuCapabilityProvider::canonicalResolved)
+                && canonicalResolved(output);
     }
 
-    private static boolean supportedDataType(DataType dataType) {
-        return dataType == DataType.FLOAT64
-                || dataType == DataType.FLOAT32
-                || dataType == DataType.INT32
-                || dataType == DataType.INT64;
-    }
-
-    private static boolean canonicalOrUnresolved(TensorDescriptor descriptor) {
-        return descriptor.layout().isEmpty() || descriptor.layout().filter(layout ->
+    private static boolean canonicalResolved(TensorDescriptor descriptor) {
+        return descriptor.layout().filter(layout ->
                 layout.kind() == LayoutKind.DENSE_CONTIGUOUS
                         && layout.storageOffset() == 0
                         && !layout.isView()).isPresent();
